--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,17 @@
-#Sat Oct 24 18:32:28 CEST 2020
+#Mon Oct 24 18:32:28 CEST 2020
+# Gradle Wrapper configuration file
+
+# Base directory for Gradle distributions
 distributionBase=GRADLE_USER_HOME
+
+# Path within the base directory for storing distributions
 distributionPath=wrapper/dists
+
+# Base directory for storing downloaded Gradle zip files
 zipStoreBase=GRADLE_USER_HOME
+
+# Path within the base directory for storing downloaded zip files
 zipStorePath=wrapper/dists
+
+# URL to download the Gradle distribution
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-all.zip
