--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package_variant: [apt-android-7]
+        package_variant: [ apt-android-7 ]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -21,13 +21,8 @@ jobs:
         with:
           ref: ${{ env.GITHUB_REF }}
 
-      - name: Install hub
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y hub
-
-      - name: Setup Java 21 as required by gradle
-        uses: actions/setup-java@v4
+      - name: Setup java 21 as required by gradle
+        uses: actions/setup-java@v4.7.0
         with:
           distribution: 'temurin'
           java-version: '21'
@@ -44,20 +39,24 @@ jobs:
               git push --delete origin "$GITHUB_REF"
               exit 1
           }
+
           echo "Setting vars"
           RELEASE_VERSION_NAME="${GITHUB_REF/refs\/tags\//}"
-          if ! printf "%s" "${RELEASE_VERSION_NAME/v/}" | grep -qP '^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$'; then
-              exit_on_error "The versionName '${RELEASE_VERSION_NAME/v/}' is not a valid version as per semantic versioning."
+          if ! printf "%s" "${RELEASE_VERSION_NAME/v/}" | grep -qP '^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$'; then
+           exit_on_error "The versionName '${RELEASE_VERSION_NAME/v/}' is not a valid version as per semantic version '2.0.0' spec in the format 'major.minor.patch(-prerelease)(+buildmetadata)'. https://semver.org/spec/v2.0.0.html."
           fi
+
           APK_DIR_PATH="./app/build/outputs/apk/debug"
           APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
-          APK_BASENAME_PREFIX="NepmodsTester_${APK_VERSION_TAG}"
-          echo "Building APKs for '$APK_VERSION_TAG' release"
+          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
+
+          echo "Building APKs for 'APK_VERSION_TAG' release"
           export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
           export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}" # Used by app/build.gradle
           if ! ./gradlew assembleDebug; then
             exit_on_error "Build failed for '$APK_VERSION_TAG' release."
           fi
+
           echo "Validating APKs"
           for abi in universal arm64-v8a armeabi-v7a x86_64 x86; do
             if ! test -f "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk"; then
@@ -65,7 +64,8 @@ jobs:
               exit_on_error "Failed to find built APK at '$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk'. Files found: "$'\n'"$files_found"
             fi
           done
-          echo "Generating sha256sums file"
+
+          echo "Generating sha25sums file"
           if ! (cd "$APK_DIR_PATH"; sha256sum \
             "${APK_BASENAME_PREFIX}_universal.apk" \
             "${APK_BASENAME_PREFIX}_arm64-v8a.apk" \
@@ -73,9 +73,10 @@ jobs:
             "${APK_BASENAME_PREFIX}_x86_64.apk" \
             "${APK_BASENAME_PREFIX}_x86.apk" \
             > "${APK_BASENAME_PREFIX}_sha256sums"); then
-            exit_on_error "Generate sha256sums failed for '$APK_VERSION_TAG' release."
+            exit_on_error "Generate sha25sums failed for '$APK_VERSION_TAG' release."
           fi
-          echo "Attaching APKs to GitHub release"
+
+          echo "Attaching APKs to github release"
           if ! gh release upload "$RELEASE_VERSION_NAME" \
             "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_universal.apk" \
             "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_arm64-v8a.apk" \
