--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'com.android.application'
-
 android {
     namespace 'Nepmods.Tester'
 
@@ -17,22 +15,30 @@ android {
         }
         signingConfigs {
             debug {
-            storeFile file('HunMod.jks')
-            storePassword 'HunMod'
-            keyAlias 'HunMod'
-            keyPassword 'HunMod'
+                storeFile file('HunMod.jks')
+                storePassword 'HunMod'
+                keyAlias 'HunMod'
+                keyPassword 'HunMod'
+            }
+            release {
+                storeFile file('HunMod.jks')
+                storePassword 'HunMod'
+                keyAlias 'HunMod'
+                keyPassword 'HunMod'
             }
         }
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
 
