--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,59 +1,65 @@
 plugins {
     id 'com.android.application'
 }
-android {
-    namespace 'Nepmods.Tester'
 
-    compileSdkVersion 34
+android {
+    namespace = "Nepmods.Tester"
+    compileSdk = 35
+    // ✅ Исправленный синтаксис
 
     defaultConfig {
-        applicationId "Nepmods.Tester"
-        minSdkVersion 21
-        targetSdkVersion 34
-        versionCode 34
-        versionName "V3"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        applicationId = "Nepmods.Tester"
+        minSdk = 21
+        versionCode = 35
+        versionName = "V3"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner" // ✅ Актуальный тестовый раннер
+
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
-        signingConfigs {
-            debug {
-                storeFile file('HunMod.jks')
-                storePassword 'HunMod'
-                keyAlias 'HunMod'
-                keyPassword 'HunMod'
-            }
-            release {
-                storeFile file('HunMod.jks')
-                storePassword 'HunMod'
-                keyAlias 'HunMod'
-                keyPassword 'HunMod'
-            }
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file("HunMod.jks")
+            storePassword "HunMod"
+            keyAlias "HunMod"
+            keyPassword "HunMod"
+        }
+        release {
+            storeFile file("HunMod.jks")
+            storePassword "HunMod"
+            keyAlias "HunMod"
+            keyPassword "HunMod"
         }
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            minifyEnabled = false
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            signingConfig = signingConfigs.release
+            debuggable true
+            // ✅ Исправленный синтаксис
         }
         debug {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug
+            minifyEnabled = false
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            signingConfig = signingConfigs.debug
+            debuggable true
         }
     }
 
     externalNativeBuild {
         ndkBuild {
-            path file('src/main/jni/Android.mk')
+            path file("src/main/jni/Android.mk")
         }
     }
 
-    ndkVersion = '28.0.13004108'
+    ndkVersion = "28.0.13004108" // ✅ Кавычки обязательны
+    buildToolsVersion = "36.0.0 rc5" // ✅ Исправленный синтаксис
+}
 
-    dependencies {
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-    }
+dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
 }
