--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="Nepmods.Tester">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- This app can appear on top of other apps -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
-    <!-- have full network access -->
+    <!-- Have full network access -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -18,21 +17,18 @@
         android:supportsRtl="true">
 
         <activity
-            android:name="Nepmods.Tester.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
 
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
-
             </intent-filter>
 
         </activity>
 
         <service
-            android:name="Nepmods.Tester.FloatingModMenuService"
+            android:name=".FloatingModMenuService"
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="true"/>
