--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Sat Feb 15 21:26:17 UZT 2025
 sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
+sdk.dir=/usr/local/lib/android/sdk
