--- a/local.properties
+++ b/local.properties
@@ -7,3 +7,4 @@
 #Sat Feb 15 21:26:17 UZT 2025
 sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
 sdk.dir=/usr/local/lib/android/sdk
+sdkmanager --sdk_root=/usr/local/lib/android/sdk --licenses
