--- a/local.properties
+++ b/local.properties
@@ -5,6 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Feb 15 21:26:17 UZT 2025
-sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
-sdk.dir=/usr/local/lib/android/sdk
-sdkmanager --sdk_root=/usr/local/lib/android/sdk "build-tools;36.0.0-rc5"
+sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
