--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -29,28 +29,29 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      # 3. Установка Android SDK, Build Tools 36.0.0-rc5 и принятие лицензий
+      # 3. Установка Android SDK и принятие лицензий
       - name: Set up Android SDK
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
-          
-          export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH
 
-          mkdir -p $ANDROID_HOME/cmdline-tools
+          export ANDROID_HOME=$HOME/android-sdk
+          export CMDLINE_TOOLS=$ANDROID_HOME/cmdline-tools/latest
+          
+          mkdir -p $CMDLINE_TOOLS
           cd $ANDROID_HOME/cmdline-tools
+          
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip commandlinetools-linux-10406996_latest.zip -d .
+          unzip -q commandlinetools-linux-10406996_latest.zip -d .
           mv cmdline-tools latest
           rm commandlinetools-linux-10406996_latest.zip
 
           echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
           echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH" >> $GITHUB_ENV
+          echo "PATH=$CMDLINE_TOOLS/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH" >> $GITHUB_ENV
 
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "platforms;android-35" "build-tools;36.0.0-rc5"
+          yes | $CMDLINE_TOOLS/bin/sdkmanager --licenses
+          $CMDLINE_TOOLS/bin/sdkmanager "platform-tools" "platforms;android-35" "build-tools;36.0.0-rc5"
 
       # 4. Установка Gradle 8.12
       - name: Set up Gradle 8.12
