--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: NepmodsTester-apk-debug
+          name: NepmodsTester-apk-debug-${{ github.run_id }}
           path: app/build/outputs/apk/debug/app-debug.apk
 
       - name: Build Release APK
@@ -63,5 +63,5 @@ jobs:
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
-          name: NepmodsTester-apk-release
+          name: NepmodsTester-apk-release-${{ github.run_id }}
           path: app/build/outputs/apk/release/app-release.apk
