--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -36,11 +36,9 @@ jobs:
       - name: Check APK build outputs
         run: ls -R app/build/outputs/apk/${{ matrix.build_type }}
 
-      - name: Create separate folder for APK
-        run: mkdir -p artifacts/${{ matrix.build_type }} && cp app/build/outputs/apk/${{ matrix.build_type }}/app-${{ matrix.build_type }}.apk artifacts/${{ matrix.build_type }}/
-
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: NepmodsTester-apk-${{ matrix.build_type }}-${{ github.run_id }}
-          path: artifacts/${{ matrix.build_type }}/app-${{ matrix.build_type }}.apk
+          path: app/build/outputs/apk/${{ matrix.build_type }}/app-${{ matrix.build_type }}.apk
+
