--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,23 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral() // ✅ jcenter() заменён
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.8.1'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral() // ✅ jcenter() заменён
     }
+}
+
+// Добавляем обработку предупреждений о депрекейшене
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "-Xlint:deprecation"
 }
 
 task clean(type: Delete) {
