--- a/local.properties
+++ b/local.properties
@@ -4,10 +4,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Sun Feb 16 01:55:55 UZT 2025
+#Sun Feb 16 03:24:33 UZT 2025
+<<<<<<<=HEAD
+>>>>>>>=26f1be940b48c022beb5659b52690851a8592670
 sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
-=======
-#Sat Feb 15 21:26:17 UZT 2025
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
->>>>>>> 26f1be940b48c022beb5659b52690851a8592670
