--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 <<<<<<<=HEAD
 >>>>>>>=26f1be940b48c022beb5659b52690851a8592670
 sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
+sdk.dir=/usr/local/lib/android/sdk
