--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -3,16 +3,26 @@ name: Update Gradle Wrapper
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 0 * * 0" # Запуск каждое воскресенье в 00:00 UTC
 
 jobs:
   update-gradle-wrapper:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Очистка кеша Git
+        run: git fetch --prune --unshallow || true
 
-      - name: Update Gradle Wrapper
+      - name: Клонирование репозитория
+        uses: actions/checkout@v4
+
+      - name: Проверка наличия gradlew
+        run: ls -l gradlew || echo "⚠️ Файл gradlew не найден!"
+
+      - name: Сделать gradlew исполняемым (если он есть)
+        run: chmod +x gradlew || true
+
+      - name: Обновление Gradle Wrapper
         uses: gradle-update/update-gradle-wrapper-action@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
