--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner" // ✅ Актуальный тестовый раннер
 
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
 
@@ -61,7 +61,7 @@ android {
         }
     }
 
-    ndkVersion = "28.0.13004108"
+    ndkVersion = "28.2.13676358"
 }
 
 dependencies {
