--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:label="Nepmods Tester V3"
+        android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true">
 
@@ -30,7 +30,7 @@
         <service
             android:name=".FloatingModMenuService"
             android:enabled="true"
-            android:exported="true"
+            android:exported="false"
             android:stopWithTask="true"/>
 
     </application>
