--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,9 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
-# Убираем подавление предупреждений о source/target
 # android.javaCompile.suppressSourceTargetDeprecationWarning=true
 
-# Добавляем флаги для компилятора
 compilerArgs=-Xlint:unchecked,-Xlint:deprecation
 
-# Для параллельного режима (опционально)
 org.gradle.parallel=true
+org.gradle.configuration-cache=true
