--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,27 +4,27 @@ plugins {
 
 android {
     namespace = "Nepmods.Tester"
+    //noinspection GradleDependency
+    compileSdkVersion = 35
 
     defaultConfig {
         applicationId = "Nepmods.Tester"
-        minSdk = 21
-        targetSdk = 35
-        compileSdk = 35 // Это можно оставить здесь, так как вы уже указываете compileSdk в другом месте
-
+        minSdkVersion 21
+        //noinspection OldTargetApi
+        targetSdkVersion 33
         versionCode = 35
         versionName = "V3"
-        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner" // ✅ Актуальный тестовый раннер
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
+            //noinspection ChromeOsAbiSupport
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-
     signingConfigs {
         debug {
             storeFile file("HunMod.jks")
@@ -39,31 +39,29 @@ android {
             keyPassword "HunMod"
         }
     }
-
     buildTypes {
         release {
             minifyEnabled = false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             signingConfig = signingConfigs.release
             debuggable false
+            jniDebuggable false
         }
         debug {
             minifyEnabled = false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             signingConfig = signingConfigs.debug
             debuggable true
+            jniDebuggable true
         }
     }
-
     externalNativeBuild {
         ndkBuild {
             path file("src/main/jni/Android.mk")
         }
     }
-
     ndkVersion = "28.2.13676358"
 }
-
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 }
