--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,7 @@ plugins {
 
 android {
     namespace = "Nepmods.Tester"
-    //noinspection GradleDependency
-    compileSdkVersion = 35
+    compileSdkVersion = 36
 
     defaultConfig {
         applicationId = "Nepmods.Tester"
@@ -17,8 +16,7 @@ android {
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            //noinspection ChromeOsAbiSupport
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86_64", "x86"
         }
     }
     compileOptions {
