--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,48 +12,60 @@ android {
         targetSdk = 36
         versionCode = 35
         versionName = "V3"
+
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86_64", "x86"
+            abiFilters += listOf("armeabi-v7a", "arm64-v8a", "x86_64", "x86")
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
+
     signingConfigs {
-        debug {
-            storeFile file("HunMod.jks")
-            storePassword "HunMod"
-            keyAlias "HunMod"
-            keyPassword "HunMod"
+        create("debug") {
+            storeFile = file("HunMod.jks")
+            storePassword = "HunMod"
+            keyAlias = "HunMod"
+            keyPassword = "HunMod"
         }
-        release {
-            storeFile file("HunMod.jks")
-            storePassword "HunMod"
-            keyAlias "HunMod"
-            keyPassword "HunMod"
+        create("release") {
+            storeFile = file("HunMod.jks")
+            storePassword = "HunMod"
+            keyAlias = "HunMod"
+            keyPassword = "HunMod"
         }
     }
+
     buildTypes {
-        release {
-            minifyEnabled = false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            signingConfig = signingConfigs.release
-            debuggable false
+        getByName("release") {
+            isMinifyEnabled = false
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
+            signingConfig = signingConfigs.getByName("release")
+            isDebuggable = false
         }
-        debug {
-            minifyEnabled = false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            signingConfig = signingConfigs.debug
-            debuggable true
+        getByName("debug") {
+            isMinifyEnabled = false
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
+            signingConfig = signingConfigs.getByName("debug")
+            isDebuggable = true
         }
     }
+
     externalNativeBuild {
         ndkBuild {
-            path file("src/main/jni/Android.mk")
+            path = file("src/main/jni/Android.mk")
         }
     }
 }
+
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation(fileTree(mapOf("dir" to "libs", "include" to listOf("*.jar"))))
 }
