--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 22 13:29:05 UZT 2025
-
-sdk.dir=C\:\\Users\\Husen\\AppData\\Local\\Android\\Sdk
+#Thu Feb 12 05:30:38 UZT 2026
+sdk.dir=C\:\\Users\\Samrat\\AppData\\Local\\Android\\Sdk
